# GAME

./: .clangd  .dir-locals.el  .gitignore  .gitmodules  CMakeLists.txt  README.org  flake.nix  main.cpp
include/: GammeOntology.h  Therac3DScene.h  TheracConfig.h  TheracMinigame.h  TheracSimulatorAdapter.hpp  UnfriendlyTextBox.h
include/Common/Ontology/: Ontology.hpp
include/Minigames/TheracSimulator/: TextBox.hpp  TheracConsole.hpp  TheracMinigame.hpp
include/Plugins/: TheracSimulatorAdapter.hpp  TheracSimulatorAdapter.hpp.in
include/Scene2D/: LayerParsing.hpp  StageMap.hpp  TileDescriptions.hpp
include/Scene2D/Scenes/HomeSlum/: HomeSlum.hpp  TileDescriptions.hpp
include/Scene3D/Scenes/RadiationLab/: RadiationLab.hpp
resources/: 1bit-color inverted.tsj  1bit.tsj  2bit_demichrome_b_r.tsj  GAME.tiled-project  GAME.tiled-session  Runeset_32x32.tsj  pdp11-2.mtl  pdp11.mtl  pocket_gray_b_r.tsj  pocket_gray_b_r.xcf  soggynewspaper_b_r.tsj  soggynewspaper_b_r.xcf  stage1.tmj  stage2.tmj  therac-25-base.mtl  vt100.mtl
resources/Downloads/dec-pdp-11/: license.txt  scene.gltf
resources/Downloads/dec-pdp-11/source/: pdp11.blend  pdp11.blend1
resources/Downloads/radiotherapy_linac(1)/: model.dae
resources/engine/font/fontawesome/: LICENSE.txt  fontawesome-brands.otf.zstdcmp  fontawesome-solid.otf.zstdcmp
resources/engine/font/materialdesignicons/: license.md  materialdesignicons-webfont.ttf.zstdcmp
resources/engine/font/mplus/: LICENSE_E  mplus-1p-black.ttf.zstdcmp  mplus-1p-bold.ttf.zstdcmp  mplus-1p-heavy.ttf.zstdcmp  mplus-1p-light.ttf.zstdcmp  mplus-1p-medium.ttf.zstdcmp  mplus-1p-regular.ttf.zstdcmp  mplus-1p-thin.ttf.zstdcmp
resources/engine/font/noto-cjk/: NotoSansCJK-Regular.ttc.zstdcmp
resources/engine/font/noto-emoji/: NotoColorEmoji.ttf.zstdcmp  NotoEmoji-Regular.ttf.zstdcmp
resources/engine/shader/essl/: apply_srgb_curve.frag  bitmapfont.frag  copy.frag  forward3d.frag  forward3d.vert  fullscreen_triangle.frag  fullscreen_triangle.vert  gaussian_blur_9.frag  line3d.frag  line3d.vert  msdffont.frag  msdffont_outline.frag  msdffont_outlineshadow.frag  msdffont_shadow.frag  msdfprint.frag  round_dot.frag  sdffont.frag  sdffont_outline.frag  sdffont_outlineshadow.frag  sdffont_shadow.frag  shape.frag  sky.frag  sprite.vert  square_dot.frag  texture.frag
resources/engine/shader/glsl/: apply_srgb_curve.frag  bitmapfont.frag  copy.frag  forward3d.frag  forward3d.vert  fullscreen_triangle.frag  fullscreen_triangle.vert  gaussian_blur_9.frag  line3d.frag  line3d.vert  msdffont.frag  msdffont_outline.frag  msdffont_outlineshadow.frag  msdffont_shadow.frag  msdfprint.frag  round_dot.frag  sdffont.frag  sdffont_outline.frag  sdffont_outlineshadow.frag  sdffont_shadow.frag  shape.frag  sky.frag  sprite.vert  square_dot.frag  texture.frag
resources/engine/soundfont/: GMGSx.sf2.txt  GMGSx.sf2.zstdcmp
resources/ldtk_test/: JSON_SCHEMA.json  Therac2D.ldtk
resources/ldtk_test/Therac2D/backups/cf25f160-8990-11ee-bcab-bbe7356a2748_2023-12-03_19-57-58/: Therac2D.ldtk
resources/ldtk_test/Therac2D/backups/cf25f160-8990-11ee-bcab-bbe7356a2748_2023-12-04_18-14-31/: Therac2D.ldtk
resources/lowpoly3d/vt100model/: model.dae
resources/stage1/: 2bit_demichrome_b_r_export.json  stage1.tmj  therac_ui.json  tile_descriptions.json
src/: Therac3DScene.cpp  TheracConfig.cpp  TheracMinigame.cpp  TheracSimulatorAdapter.cpp  UnfriendlyTextBox.cpp
src/Common/: JapanImporterExporter.cpp  SerializeConfig.cpp
src/Minigames/TheracSimulator/: TextBox.cpp  TheracConsole.cpp  TheracMinigame.cpp
src/Plugins/: TheracSimulatorAdapter.cpp
src/Scene2D/: LayerParsing.cpp  StageMap.cpp  TileDescriptions.cpp
src/Scene2D/Scenes/HomeSlum/: HomeSlum.cpp  TileDescriptions.cpp
src/Scene3D/Scenes/RadiationLab/: RadiationLab.cpp
