cmake_minimum_required(VERSION 3.26)
project(GAME)

# this is way easier than finding the 382 deps found by ldd
find_package(Siv3D)
find_package(EnTT)
set(ghc_version 9.8.1)
set(ghc_rts_ver 1.0.2)
file(COPY resources DESTINATION ${CMAKE_BINARY_DIR})
file(COPY $ENV{HOME}/.ghcup/ghc/9.8.1/lib/ghc-9.8.1/lib/x86_64-linux-ghc-9.8.1/libHSrts-${ghc_rts_ver}-ghc${ghc_version}.so DESTINATION ${CMAKE_BINARY_DIR})

#target_compile_features(Siv3DTest PRIVATE cxx_std_20)
#add_library(libSiv3D STATIC IMPORTED)
#set_target_properties(libSiv3D PROPERTIES IMPORTED_LOCATION "${CMAKE_SOURCE_DIR}/OpenSiv3D/Linux/build/libSiv3D.a")
#set_target_properties(libSiv3D PROPERTIES INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_SOURCE_DIR}/OpenSiv3D/Siv3D/include;${CMAKE_SOURCE_DIR}/OpenSiv3D/Siv3D/include/ThirdParty")

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -Wextra -Wpedantic -Wno-unused-parameter -fPIE -fPIC -L$ENV{HOME}/.ghcup/ghc/9.8.1/lib/ghc-9.8.1/lib/x86_64-linux-ghc-9.8.1/")
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
include_directories(${PROJECT_SOURCE_DIR} ${PROJECT_SOURCE_DIR}/include ${PROJECT_SOURCE_DIR}/OpenSiv3D ${PROJECT_SOURCE_DIR}/OpenSiv3D/Siv3D  ${PROJECT_SOURCE_DIR}/OpenSiv3D/Siv3D/include $ENV{HOME}/.ghcup/ghc/${ghc_version}/lib/ghc-${ghc_version}/lib/x86_64-linux-ghc-${ghc_version}/rts-${ghc_rts_ver}/include)
add_library(theracMinigame SHARED src/TheracConfig.cpp src/UnfriendlyTextBox.cpp src/TheracMinigame.cpp src/TheracSimulatorAdapter.cpp)
add_library(therac3DScene SHARED src/Therac3DScene.cpp)
add_library(gqScene2D SHARED src/Scene2D/StageMap.cpp src/Scene2D/LayerParsing.cpp src/Scene2D/TileDescriptions.cpp)
set_target_properties(therac3DScene PROPERTIES PUBLIC_HEADER include/Therac3DScene.h)
set_target_properties(gqScene2D PROPERTIES PUBLIC_HEADER include/Scene2D/StageMap.hpp)
add_executable(GAME main.cpp)

#target_link_libraries(theracMinigame Siv3D::Siv3D EnTT::EnTT ${PROJECT_SOURCE_DIR}/hstherac25/dist-newstyle/build/x86_64-linux/ghc-${ghc_version}/hstherac25-0.1.0.0/build/libHShstherac25-0.1.0.0-inplace.a )
target_link_libraries(theracMinigame Siv3D::Siv3D EnTT::EnTT)
target_link_libraries(therac3DScene Siv3D::Siv3D EnTT::EnTT)
target_link_libraries(gqScene2D Siv3D::Siv3D EnTT::EnTT)
target_link_libraries(GAME PUBLIC Siv3D::Siv3D PUBLIC EnTT::EnTT PUBLIC theracMinigame PUBLIC therac3DScene PUBLIC gqScene2D  ${PROJECT_SOURCE_DIR}/hstherac25/dist-newstyle/build/x86_64-linux/ghc-${ghc_version}/hstherac25-0.1.0.0/build/libHShstherac25-0.1.0.0-inplace-ghc${ghc_version}.so ffi HSrts-${ghc_rts_ver}-ghc${ghc_version})
